kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moocfi-backend
  namespace: moocfi
spec:
  selector:
    matchLabels:
      app: moocfi-backend
  replicas: 3
  template:
    metadata:
      labels:
        app: moocfi-backend
    spec:
      containers:
        - name: moocfi-backend
          image: ${BACKEND_IMAGE}
          imagePullPolicy: Always
          ports:
            - name: backend-http
              containerPort: 4000
          resources:
            limits:
              memory: 700Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: google-cloud-storage-serviceaccount
              mountPath: "/etc/gcs"
              readOnly: true
      volumes:
        - name: google-cloud-storage-serviceaccount
          secret:
            secretName: google-cloud-storage-serviceaccount
            items:
              - key: account.json
                path: account.json
