kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moocfi-frontend
  namespace: moocfi
spec:
  selector:
    matchLabels:
      app: moocfi-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: moocfi-frontend
    spec:
      containers:
        - name: moocfi-frontend
          image: ${FRONTEND_IMAGE}
          imagePullPolicy: Always
          ports:
            - name: frontend-http
              containerPort: 3021
