kubernetes/kafka-consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: moocfi
spec:
  selector:
    matchLabels:
      app: kafka-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: ${BACKEND_IMAGE}
          command: ["sh", "-c", "npm run start-kafka-consumers"]
          imagePullPolicy: Always
          ports:
            - name: backend-http
              containerPort: 4000
          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: google-cloud-storage-serviceaccount
              mountPath: "/etc/gcs"
              readOnly: true
      volumes:
        - name: google-cloud-storage-serviceaccount
          secret:
            secretName: google-cloud-storage-serviceaccount
            items:
              - key: account.json
                path: account.json
