kubernetes/prisma-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prisma
  name: prisma
  namespace: moocfi
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: prisma
    spec:
      containers:
        - name: prisma
          image: prismagraphql/prisma:1.34
          ports:
            - containerPort: 4466
          resources: {}
      restartPolicy: Always
status: {}
