kubernetes/prisma-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prisma
  name: prisma
  namespace: moocfi
spec:
  replicas: 6
  strategy: {}
  template:
    metadata:
      labels:
        app: prisma
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - prisma
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: prisma
          image: prismagraphql/prisma:1.34
          resources:
            limits:
              memory: 2000Mi
              cpu: 1000m
            requests:
              memory: 1000Mi
              cpu: 1000m
          ports:
            - containerPort: 4466
          resources: {}
      restartPolicy: Always
status: {}
