kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: moocfi-backend
  namespace: moocfi
  labels:
    app: moocfi-backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: backend-http
  - port: 9000
    targetPort: backend-websocket
  selector:
    app: moocfi-backend
