kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: moocfi-frontend
  namespace: moocfi
  labels:
    app: moocfi-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: frontend-http
  selector:
    app: moocfi-frontend
