kubernetes/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prisma
  name: prisma
  namespace: moocfi
spec:
  type: NodePort
  ports:
  - name: "4466"
    port: 30432
    targetPort: 4466
  selector:
    app: prisma
