kubernetes/ws-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ws
  namespace: moocfi
  labels:
    app: moocfi-backend
spec:
  type: NodePort
  ports:
  - port: 9000
    name: "ws"
    targetPort: ws
  selector:
    app: moocfi-backend
