kubernetes/prisma-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prisma
  namespace: moocfi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - moocfi-prisma.mooc.fi
    secretName: moocfi-prisma-moocfi-cert-secret
  rules:
    - host: moocfi-prisma.mooc.fi
      http:
        paths:
        - path: /
          backend:
            serviceName: prisma
            servicePort: 30432
